==> SiliconLabsSoftware/third_party_hw_drivers_extension/driver/public/silabs/environmental_bme280_ccs811/src/sparkfun_bme280.c <==
#include "sl_status.h"
#include "sparkfun_bme280.h"
#define  BME280_REGISTER_CONTROLHUMID     0xF2
#define  BME280_REGISTER_CONTROL          0xF4
#define  BME280_REGISTER_CONFIG           0xF5
#define  BME280_REGISTER_PRESSUREDATA     0xF7
#define  BME280_REGISTER_TEMPDATA         0xFA
#define  BME280_REGISTER_HUMIDDATA        0xFD
#define  BME280_REGISTER_STATUS           0xF3
#define  BME280_REGISTER_T1               0x88
#define  BME280_REGISTER_T2               0x8A
#define  BME280_REGISTER_T3               0x8C
#define  BME280_REGISTER_P1               0x8E
#define  BME280_REGISTER_P2               0x90
#define  BME280_REGISTER_P3               0x92
#define  BME280_REGISTER_P4               0x94
#define  BME280_REGISTER_P5               0x96
#define  BME280_REGISTER_P6               0x98
#define  BME280_REGISTER_P7               0x9A
#define  BME280_REGISTER_P8               0x9C
#define  BME280_REGISTER_P9               0x9E
#define  BME280_REGISTER_H1               0xA1
#define  BME280_REGISTER_H2               0xE1
#define  BME280_REGISTER_H3               0xE3
#define  BME280_REGISTER_H4               0xE4
#define  BME280_REGISTER_H5               0xE5
#define  BME280_REGISTER_H6               0xE7
#define  BME280_REGISTER_CHIP_ID          0xD0
#define  BME280_REGISTER_VERSION          0xD1
#define  BME280_REGISTER_RESET            0xE0
#define  BME280_REGISTER_CAL26            0xE1

sl_status_t sparkfun_bme280_i2c(mikroe_i2c_handle_t i2cspm, uint8_t addr)
{
  i2c_master_config_t atmospheric_config;
  atmospheric.i2c.handle = i2cspm;
  atmospheric.slave_address = addr;

  i2c_master_configure_default(&atmospheric_config);

  if (i2c_master_open(&atmospheric.i2c,
                      &atmospheric_config) == I2C_MASTER_ERROR) {
    return SL_STATUS_INITIALIZATION;
  }

#if (SPARKFUN_BME280_I2C_UC == 1)
  atmospheric_config.speed = SPARKFUN_BME280_I2C_SPEED_MODE;
#endif

  i2c_master_set_slave_address(&atmospheric.i2c, atmospheric.slave_address);
  i2c_master_set_speed(&atmospheric.i2c, atmospheric_config.speed);
  i2c_master_set_timeout(&atmospheric.i2c, 0);
  return SL_STATUS_OK;
}

static sl_status_t read_one_byte(uint8_t registeraddress, uint8_t *returnbyte)
{
  if (I2C_MASTER_SUCCESS != i2c_master_write_then_read(&atmospheric.i2c,
                                                       &registeraddress,
                                                       1,
                                                       returnbyte,
                                                       1)) {
    return SL_STATUS_TRANSMIT;
  }
  return SL_STATUS_OK;
}

static sl_status_t write_one_byte(uint8_t registeraddress, uint8_t writevalue)
{
  uint8_t data[2] = { registeraddress, writevalue };

  if (I2C_MASTER_SUCCESS != i2c_master_write(&atmospheric.i2c,
                                             data,
                                             2)) {
    return SL_STATUS_TRANSMIT;
  }
  return SL_STATUS_OK;
}

static sl_status_t read_two_bytes(uint8_t registeraddress,
                                  uint16_t *returnbyte)
{
  if (I2C_MASTER_SUCCESS != i2c_master_write_then_read(&atmospheric.i2c,
                                                       &registeraddress,
                                                       1,
                                                       (uint8_t *)returnbyte,
                                                       2)) {
    return SL_STATUS_TRANSMIT;
  }

  return SL_STATUS_OK;
}
