==> SiliconLabs/third_party_hw_drivers_extension/driver/public/silabs/environmental_bme280_ccs811/src/sparkfun_bme280.c <==
#include "sl_status.h"
#include "sl_sleeptimer.h"
#include "sparkfun_bme280.h"
#define  BME280_REGISTER_CONTROLHUMID     0xF2
#define  BME280_REGISTER_CONTROL          0xF4
#define  BME280_REGISTER_CONFIG           0xF5
#define  BME280_REGISTER_PRESSUREDATA     0xF7
#define  BME280_REGISTER_TEMPDATA         0xFA
#define  BME280_REGISTER_HUMIDDATA        0xFD
#define  BME280_REGISTER_STATUS           0xF3
#define  BME280_REGISTER_T1               0x88
#define  BME280_REGISTER_T2               0x8A
#define  BME280_REGISTER_T3               0x8C
#define  BME280_REGISTER_P1               0x8E
#define  BME280_REGISTER_P2               0x90
#define  BME280_REGISTER_P3               0x92
#define  BME280_REGISTER_P4               0x94
#define  BME280_REGISTER_P5               0x96
#define  BME280_REGISTER_P6               0x98
#define  BME280_REGISTER_P7               0x9A
#define  BME280_REGISTER_P8               0x9C
#define  BME280_REGISTER_P9               0x9E
#define  BME280_REGISTER_H1               0xA1
#define  BME280_REGISTER_H2               0xE1
#define  BME280_REGISTER_H3               0xE3
#define  BME280_REGISTER_H4               0xE4
#define  BME280_REGISTER_H5               0xE5
#define  BME280_REGISTER_H6               0xE7
#define  BME280_REGISTER_CHIP_ID          0xD0
#define  BME280_REGISTER_VERSION          0xD1
#define  BME280_REGISTER_RESET            0xE0
#define  BME280_REGISTER_CAL26            0xE1

sl_status_t sparkfun_bme280_i2c(sparkfun_bme280_i2c_t *init)
{
  sparkfun_bme280.i2c_sensor = init->i2c_sensor;
  sparkfun_bme280.i2c_address = init->i2c_address;
  return SL_STATUS_OK;
}

static sl_status_t read_one_byte(uint8_t registeraddress, uint8_t *returnbyte)
{
  sl_status_t ret_val = SL_STATUS_FAIL;
  uint8_t data = 0;
  // Transfer structure.
  I2C_TransferSeq_TypeDef i2c_transfer;

  // Initializing I2C transfer.
  i2c_transfer.addr = BME_280_DEFAULT_I2C_ADDR << 1;
  /// Master write
  i2c_transfer.flags = I2C_FLAG_WRITE_READ;

  // Transmit buffer, no data to send.
  i2c_transfer.buf[0].data = &registeraddress;
  i2c_transfer.buf[0].len = 1;

  // Receive buffer, two bytes to receive.
  i2c_transfer.buf[1].data = &data;
  i2c_transfer.buf[1].len = 1;

  if (I2CSPM_Transfer(sparkfun_bme280.i2c_sensor,
                      &i2c_transfer) == i2cTransferDone) {
    ret_val = SL_STATUS_OK;
  }
  *returnbyte = data;
  return ret_val;
}

static sl_status_t write_one_byte(uint8_t registeraddress, uint8_t writevalue)
{
  sl_status_t ret_val = SL_STATUS_FAIL;
  uint8_t data[2] = { registeraddress, writevalue };
  // Transfer structure.
  I2C_TransferSeq_TypeDef i2c_transfer;

  // Initializing I2C transfer.
  i2c_transfer.addr = BME_280_DEFAULT_I2C_ADDR << 1;
  // Master write
  i2c_transfer.flags = I2C_FLAG_WRITE;

  // Transmit buffer, 2 bytes to send.
  i2c_transfer.buf[0].data = data;
  i2c_transfer.buf[0].len = 2;

  i2c_transfer.buf[1].data = 0UL;
  i2c_transfer.buf[1].len = 0;

  if (I2CSPM_Transfer(sparkfun_bme280.i2c_sensor,
                      &i2c_transfer) == i2cTransferDone) {
    ret_val = SL_STATUS_OK;
  }
  return ret_val;
}

static sl_status_t read_two_bytes(uint8_t registeraddress,
                                  uint16_t *returnbyte)
{
  sl_status_t ret_val = SL_STATUS_FAIL;
  uint16_t data = 0;

  // Transfer structure.
  I2C_TransferSeq_TypeDef i2c_transfer;

  // Initializing I2C transfer.
  i2c_transfer.addr = BME_280_DEFAULT_I2C_ADDR << 1;
  // Master write.
  i2c_transfer.flags = I2C_FLAG_WRITE_READ;
  // Transmit buffer, no data to send.
  i2c_transfer.buf[0].data = &registeraddress;
  i2c_transfer.buf[0].len = 1;

  // Receive buffer, two bytes to receive.
  i2c_transfer.buf[1].data = (uint8_t *)&data;
  i2c_transfer.buf[1].len = 2;

  if (I2CSPM_Transfer(sparkfun_bme280.i2c_sensor,
                      &i2c_transfer) == i2cTransferDone) {
    ret_val = SL_STATUS_OK;
  }
  *returnbyte = data;
  return ret_val;
}
